objects/Passbook_Config__mdt.object
<CustomObject>
    <description>Integration configuration for Passbook integration</description>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_API_Client__c</fullName>
        <label>X API Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X_API_Secret__c</fullName>
        <label>X API Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Passbook Config</label>
    <pluralLabel>Passbook Configs</pluralLabel>
</CustomObject>